--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <section id="proyectos" class="proyectos">
             <h1>Proyectos</h1>
             <div class="categoria">
-                <h2>TFG - Gestión de formaciones <a href="https://github.com/levijcdfEVG/TFG-2DAW" target="_blank" rel="noopener noreferrer"><img src="img\githubIcon\github-mark\github-mark.png"></a> </h2>
+                <h2>TFG - Gestión de formaciones <a href="https://github.com/levijcdfEVG/TFG-2DAW" target="_blank" rel="noopener noreferrer"><img src="img\github-mark.png"></a> </h2>
                 <p>Aplicación web para la gestión de formaciones, desarrollada en Angular y PHP. Utiliza MySQL como base de datos.</p>
                 <ul>Tareas realizadas:
                     <li>CRUD para la gestión de los Centros adscritos a la gestión de formaciones, con sus validaciones en formularios.</li>
